--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo
+        run: hugo --baseURL https://dpmland.github.io/docs_land/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
